2007-10-07  Andreia Gaita  <avidigal@novell.com>

	* Implement helper methods for the nsString class, to 
	initialize/destroy nsString instances and get/set the actual
	chars.
	All dom interface methods that have string parameters
	take a nsString class, which comes from these helper
	methods.
	Change the exit to really quit the gtk thread.
	Add dom interface support.

2007-09-23  Andreia Gaita  <avidigal@novell.com>

	* Implement dialog popups through the custom 
	PromptService - alert, alertcheck, confirm,
	confirmcheck, confirmex, prompt, promptpassword,
	promptusernameandpassword, select
	Fix event naming.
	BrowserWindow is now an interface, don't know if
	that is to keep.

2007-09-13  Andreia Gaita  <avidigal@novell.com>

	* add enumeration to control focus
	* remove blur method (not needed)
	* fix bad parameter on gtk_shutdown

2007-09-12  Andreia Gaita  <avidigal@novell.com>

	* GtkWidget.cpp: Fix keyboard handling
	* Widget.*, xulbrowser.*: 
		- setup shutdown routines
		- do a bit more logging, prepare for non-debug builds

Mon Aug 20 19:45:18 CEST 2007 Paolo Molaro <lupus@ximian.com>

	* Widget.cpp: set the parent earlier in CreateBrowserWindow ().

2007-08-09 Andreia Gaita <avidigal@novell.com>

	* LocationProvider.*: Custom directory service
	implementation to control where profiles, defaults
	and components are loaded, and where the component
	registry is saved. This is so that components can
	be loaded from the xulrunner lib path but the 
	registry is saved to the application dir.
	
	Saving and loading profiles from the application
	dir also enables https, since it needs to save 
	and load	the cert.db and similar files somewhere 
	or else https is not initialized 
	(https://bugzilla.mozilla.org/show_bug.cgi?id=309877)
	
	* BrowserWindow.*: Navigation control. Page reloading.
	
	* Widget.*: Custom GRE startup to use the custom
	directory service provider (LocationProvider) instead
	of the default provider.
	Implement more events.
	