@@ -1,3 +1,8 @@
+2007-10-18  Andreia Gaita  <avidigal@novell.com>
+
+	* Widget.cpp: fix pointer cast for 64-bit arch, fix asynch 
+	return value
+
 2007-10-07  Andreia Gaita  <avidigal@novell.com>
 
 	* Implement helper methods for the nsString class, to 
